Closed
Bug 153146
Opened 23 years ago
Closed 23 years ago
makecopy.exe's error output is foobared
Categories
(SeaMonkey :: Build Config, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
References
()
Details
Attachments
(1 file)
710 bytes,
patch
|
netscape
:
review+
|
Details | Diff | Splinter Review |
Installing .\WIN32_O.OBJ\viewer.exe into
..\..\..\dist\WIN32_O.OBJ\bin\viewer.exe
1.790661E-307rror: s32, The process cannot access the file because it is being
used by another process.
this comes from
..\..\..\config\makecopy.exe .\WIN32_O.OBJ\viewer.exe
..\..\..\dist\WIN32_O.OBJ\bin
148 fprintf(stderr, "%Error: s\n", msg);
am i supposed to commit makecopy.exe too?
Assignee: seawood → timeless
Comment 3•23 years ago
|
||
Comment on attachment 88474 [details] [diff] [review]
move the % sign where it belongs
r=cls
Attachment #88474 -
Flags: review+
Comment 4•23 years ago
|
||
Yes, makecopy.exe needs to be checked in after makecopy.cpp.
fixed
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•