Bug 153146 makecopy.exe's error output is foobared r=cls